# ConcurrentCalc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  calcmainwindow.cpp  calcmainwindow.h  expressionstate.cpp  expressionstate.h  main.cpp
Backend/: arithmetic.cpp  arithmetic.h  backend.cpp  backend.h  structs.cpp  structs.h
LibDoit/: CMakeLists.txt  doit.cpp  doit.h
Model/: expressionslistmodel.cpp  expressionslistmodel.h
ui/: calcmainwindow.ui
